--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,22 @@ a:hover {
   color: #535bf2;
 }
 
+body, #root {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  min-height: 100vh;
+  box-sizing: border-box;
+}
+
+.app-main-container {
+  width: 100vw;
+  min-height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   margin: 0;
   display: flex;
